yaml/fluentd.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: default
spec:
  selector:
    matchLabels:
      name: fluentd
  template:
    metadata:
      labels:
        name: fluentd
    spec:
      serviceAccountName: fluentd
      tolerations:
        - operator: "Exists"
      volumes:
        - name: varlog
          hostPath:
            path: /var/log/containers
        - name: varlogpods
          hostPath:
            path: /var/log/pods
        - name: fluentd-logs
          hostPath:
            path: /var/log/fluentd
        - name: config
          configMap:
            name: fluentd-config
      containers:
        - name: fluentd
          image: swensadocker/fluentd-cri:1.0
          resources:
            requests:
              memory: 100Mi
              cpu: 50m
            limits:
              memory: 200Mi
              cpu: 200m

          volumeMounts:
            - name: varlog
              mountPath: /var/log/containers
            - name: varlogpods
              mountPath: /var/log/pods
            - name: fluentd-logs
              mountPath: /var/log/fluentd
            - name: config
              mountPath: /fluentd/etc
          securityContext:
            runAsUser: 0
            runAsNonRoot: false
