yaml/agent_scheduler.yaml
apiVersion: v1
kind: Service
metadata:
  name: scheduler-service
spec:
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: scheduler

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-deployment
spec:
  selector:
    matchLabels:
      app: scheduler
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: scheduler
    spec:
      containers:
        - image: swensadocker/dims-scheduler-dev:1.0.0-485
          name: scheduler
          resources:
            requests:
              memory: "500Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 5000
              name: scheduler
          volumeMounts:
            - name: scheduler-persistent-storage
              mountPath: /backup/
      volumes:
        - name: scheduler-persistent-storage
          persistentVolumeClaim:
            claimName: scheduler-pv-claim
