yaml/dims.yaml
apiVersion: v1
kind: Service
metadata:
  name: dims-service
spec:
  ports:
    - port: 80
      targetPort: 3333
  selector:
    app: dims

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dims-deployment
spec:
  selector:
    matchLabels:
      app: dims
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dims
    spec:
      serviceAccountName: dims-service-account  # Add the ServiceAccount
      containers:
        - image: swensadocker/dims:_DIMSIMAGE_
          name: dims
          resources:
            requests:
              memory: "1Gi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "500m"
          ports:
            - containerPort: 3333
              name: dims
